[B]Version 1.1.71[/B]
xhamster - fix listing
hqporner - lookup info contextmenu