@@ -1,3 +1,4 @@
 [B]Version 1.1.71[/B]
 xhamster - fix listing
 hqporner - lookup info contextmenu
+pornhub - fix access in Germany
